--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@
     margin-bottom: 4px;
     font-size: 28px;
     line-height: 33px;
+    text-align: center;
   }
   
   
@@ -44,6 +45,7 @@
     font-size: 14px;
     line-height: 16px;
     color: rgba(0, 0, 0, 0.7);
+    text-align: center;
   }
   
   section{
@@ -74,11 +76,8 @@
     line-height: 19px;
   }
   
-  .details p{
+  .details p {
     color: rgba(0, 0, 0, 0.6);
     font-size: 14px;
     line-height: 21px;
   }
-  
-  
-  
